--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,44 @@
+* {
+    color: white;
+}
+
 body {    
-    display: block;
-    width: 40%;
+    background-color: rgba(27, 27, 50, 0.7);
+    background-image: url("dev_background.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    display: block;    
     margin: 0 auto;
     text-align: left;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
 }
 
 p {
     margin-top: 0;
     margin-bottom: 0;
+    font-size: 1.5rem;
 }
 
 #survey-form {
-    align-self: cente;
+    margin: 0 auto;    
     padding: 2.5rem;    
     background: rgba(27, 27, 50, 0.8);
+    width: 45%;
+    border-radius: 0.75rem;
+}
 
+.form-group {
+    margin: 0 0 1.25rem auto;
+    padding: 0.25rem;
+    width: 100%;    
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 2.5rem;
+    padding: 0.375rem;
+    border-radius: 0.5rem; 
 }
 
 h1 {
@@ -26,3 +49,17 @@ h3 {
     text-align: center;
 }
 
+label {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+option {
+    color: black;
+    font-size: 1.5rem;
+}
+
+input, select, textarea{
+    color: rgb(119, 118, 118);
+    font-size: 1.5rem;
+}
